fixed bug where suggestion menu showed up after changing apps on mobile

--- a/client/src/Home.css
+++ b/client/src/Home.css
@@ -36,7 +36,7 @@
 
   font-size: 1.5rem;
 
-  width: 285px;
+  width: 325px;
   min-height: 2.25rem;
 }
 #movie-title-input-placeholder {
